Fix spacing issue.

--- a/src/components/shared/side-bar.scss
+++ b/src/components/shared/side-bar.scss
@@ -11,6 +11,10 @@
       text-align: center;
     }
   
+    .app-icon {
+      padding: 0;
+    }
+
     .toggle {
       cursor: pointer;
     }
